--- a/document/pages/search/search.wxml
+++ b/document/pages/search/search.wxml
@@ -1,2 +1,24 @@
-<!--pages/search/search.wxml-->
-<text>pages/search/search.wxml</text>
+<!-- miniprogram/pages/search/search.wxml -->
+<view class="search">
+    <!-- *输入框板块 -->
+    <view class="search-part">
+        <i-icon type="search" i-class="search-icon" size="18" color="#666" />
+        <input type="text" placeholder="输入商品名称" class="search-input" auto-focus="{{true}}" bindinput="handleValue" value="{{searchValue}}"/>
+    </view>
+    <!-- *热门搜索 -->
+    <view class="hot-search">
+        <p class="search-tit">热门搜索</p>
+        <view class="hot-keyword-part">
+            <view class="hot-keyword" wx:for="{{hotArray}}" wx:for-index="index" wx:for-item="item" bindtap="hotKeyword" data-index="{{index}}" data-item="{{item}}">
+                {{item.title}}
+            </view>
+        </view>
+    </view>
+    <!-- *历史搜索 -->
+    <view class="history-search">
+        <p class="search-tit">历史搜索</p>
+        <view class="history-keyword-part">
+            <view class="history-keyword">历史搜谱</view>
+        </view>
+    </view>
+</view>
